--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,79 @@
+* {
+    box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    font-family: "Inter var", sans-serif;
+    background: linear-gradient(155deg, #ffffff 20%, #d6d6d6);
+    color: #101015;
+}
+
 canvas {
     width: 100%;
     height: 100vh;
+}
+
+.overlay {
+    z-index: 5;
+    padding: 40px;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tilted {
+    position: absolute;
+    transform: rotate(-90deg);
+    left: 0;
+    bottom: 90px;
+}
+
+a {
+    pointer-events: all;
+    text-decoration: none;
+}
+
+a:hover {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.menu > span {
+    font-size: 12px;
+    letter-spacing: 5px;
+    margin-left: 16px;
+    opacity: 0.5;
+    text-transform: uppercase;
+    pointer-events: all;
+}
+
+.menu > span:hover {
+    cursor: pointer;
+    opacity: 1;
+    color: #ff9064;
 }
