--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body,
 
 body {
     font-family: "Inter var", sans-serif;
-    background: linear-gradient(155deg, #ffffff 20%, #d6d6d6);
     color: #101015;
 }
 
@@ -46,11 +45,34 @@ canvas {
     align-items: center;
 }
 
-.tilted {
-    position: absolute;
-    transform: rotate(-90deg);
-    left: 0;
-    bottom: 90px;
+.fade {
+    animation: fadeInUp 1.5s linear;
+}
+
+@keyframes fadeInUp {
+    0% {
+        transform: translate(0px, 40px);
+        opacity: 0;
+    }
+    100% {
+        transform: translate(0px, 0);
+        opacity: 1;
+    }
+}
+
+.fadeOut {
+    animation: fadeOutDown 1.5s linear;
+}
+
+@keyframes fadeInUp {
+    100% {
+        transform: translate(0px, 0);
+        opacity: 1;
+    }
+    0% {
+        transform: translate(0px, 40px);
+        opacity: 0;
+    }
 }
 
 a {
@@ -67,13 +89,18 @@ a:hover {
     font-size: 12px;
     letter-spacing: 5px;
     margin-left: 16px;
-    opacity: 0.5;
+    opacity: 0.3;
     text-transform: uppercase;
     pointer-events: all;
 }
 
 .menu > span:hover {
     cursor: pointer;
+    opacity: 1;
+    color: #ff9064;
+}
+
+.menu > .active {
     opacity: 1;
     color: #ff9064;
 }
