--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,6 @@ body,
 #root {
     margin: 0;
     padding: 0;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
 }
 
 body {
@@ -103,4 +99,35 @@ a:hover {
 .menu > .active {
     opacity: 1;
     color: #ff9064;
+}
+
+.page {
+    width: 90%;
+    height: 100vh;
+    z-index: 5;
+    position: absolute;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    top: 20%;
+    padding: 22px;
+    left: 5%;
+}
+
+.page-enter {
+    opacity: 0;
+}
+
+.page-enter-active {
+    opacity: 1;
+    transition: opacity 400ms;
+    transition-delay: 600ms;
+}
+
+.page-exit {
+    opacity: 1;
+}
+
+.page-exit-active {
+    opacity: 0;
+    transition: opacity 400ms;
 }
