--- a/src/App.css
+++ b/src/App.css
@@ -81,53 +81,176 @@ a:hover {
     text-decoration: none;
 }
 
-.menu > span {
+.menu span {
     font-size: 12px;
     letter-spacing: 5px;
     margin-left: 16px;
     opacity: 0.3;
     text-transform: uppercase;
     pointer-events: all;
+    color: #101015;
 }
 
-.menu > span:hover {
+.menu span:hover {
     cursor: pointer;
     opacity: 1;
     color: #ff9064;
 }
 
-.menu > .active {
+.menu .active {
     opacity: 1;
     color: #ff9064;
 }
 
 .page {
-    width: 90%;
-    height: 100vh;
+    width: 80%;
     z-index: 5;
     position: absolute;
-    border-top-left-radius: 24px;
-    border-top-right-radius: 24px;
     top: 20%;
-    padding: 22px;
-    left: 5%;
+    left: 10%;
+    padding-bottom: 120px;
 }
 
-.page-enter {
-    opacity: 0;
+.card {
+    background-color: dodgerblue;
+    color: white;
+    height: 250px;
 }
 
-.page-enter-active {
-    opacity: 1;
-    transition: opacity 400ms;
-    transition-delay: 600ms;
+.card:hover {
+    cursor: pointer;
 }
 
-.page-exit {
-    opacity: 1;
+.cards {
+    max-width: 100%;
+    margin: 0 auto;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
-.page-exit-active {
-    opacity: 0;
-    transition: opacity 400ms;
+.card > div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;
+    overflow: hidden;
+}
+
+.card > div > div {
+    padding: 16px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    pointer-events: none;
+    left: 0;
+    background: rgba(255, 144, 100, 0.8);
+}
+
+.card > div > img {
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.card > div > div > h3 {
+    margin: 0;
+}
+
+.card > div > div > p {
+    margin: 0;
+}
+
+p {
+    text-align: justify;
+    max-width: 800px;
+}
+
+.donations {
+    position: relative;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    padding: 2em;
+    max-width: 400px;
+    background: white;
+    overflow: hidden;
+    margin-top: 16px;
+}
+
+.donations__progress-bar {
+    background: rgba(255, 144, 100, 1);
+    height: 1em;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 45%;
+}
+
+.donations__progress {
+    text-align: center;
+}
+
+.donations__text {
+    margin-bottom: 1em;
+    line-height: 1.5;
+}
+
+.donations__donors {
+    font-weight: bold;
+}
+
+.donations__form {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-size: 1.3em;
+}
+
+.donations__input,
+.donations__submit,
+.donations__reset {
+    font-size: inherit;
+    border: none;
+    padding: 0.5em 0.8em;
+    border-radius: 5px;
+    width: 45%;
+    min-width: 100px;
+    margin-bottom: 1em;
+    background: white;
+    color: black;
+}
+
+.donations__submit {
+    background: rgba(255, 144, 100, 0.8);
+    color: white;
+}
+
+.donations__submit:hover {
+    cursor: pointer;
+    background: rgba(255, 144, 100, 1);
+}
+
+.donations__reset {
+    color: white;
+    flex-grow: 1;
+}
+
+.donations__input {
+    border: 1px solid #eee;
+    padding-left: 1em;
+}
+
+.donations__input-icon {
+    position: absolute;
+    color: black;
+    line-height: 1.3;
+    padding: 0.5em 0.3em;
+    pointer-events: none;
+}
+
+#lottie {
+    margin: 0 !important;
 }
