--- a/src/index.css
+++ b/src/index.css
@@ -13,22 +13,11 @@
     -webkit-text-size-adjust: 100%;
 }
 
-body {
-    height: 100vh;
-    background-color: #fafafa;
+::-moz-selection {
+    /* Code for Firefox */
+    background: rgba(255, 144, 100, 0.3);
 }
 
-a {
-    font-weight: 500;
-    color: #ff9064;
-    text-decoration: inherit;
-}
-
-a:hover {
-    color: #f5703b;
-}
-
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
+::selection {
+    background: rgba(255, 144, 100, 0.3);
 }
