--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ body {
     color: #101015;
 }
 
+body {
+    height: 100vh;
+    background-color: #fafafa;
+}
+
 canvas {
     width: 100%;
     height: 100vh;
@@ -39,6 +44,7 @@ canvas {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .fade {
@@ -73,19 +79,27 @@ canvas {
 
 a {
     pointer-events: all;
-    text-decoration: none;
+    font-weight: 500;
+    color: #ff9064;
+    text-decoration: inherit;
 }
 
 a:hover {
     cursor: pointer;
     text-decoration: none;
+    color: #f5703b;
+}
+
+h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
 }
 
 .menu span {
     font-size: 12px;
     letter-spacing: 5px;
     margin-left: 16px;
-    opacity: 0.3;
+    opacity: 0.6;
     text-transform: uppercase;
     pointer-events: all;
     color: #101015;
@@ -253,4 +267,34 @@ p {
 
 #lottie {
     margin: 0 !important;
+}
+
+.splash-bg {
+    position: fixed;
+    background-color: #f5703b;
+    z-index: 10;
+    top: 0;
+    right: 0;
+}
+
+.splash-icon {
+    z-index: 20;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.splash-menu {
+    z-index: 20;
+    position: absolute;
+}
+
+.splash-menu {
+    margin: 10%;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    height: 80%;
+    justify-content: space-around;
+    align-items: center;
 }
